# granola-fast-mcp

./: CLAUDE.md  Makefile  README.md  TEST_PLAN.md  pyproject.toml
src/granola_fast_mcp/: __main__.py  backup.py  cache.py  config.py  server.py  timezone.py  types.py
src/granola_fast_mcp/tools/: backup_ops.py  meeting_ops.py
tests/: conftest.py  test_backup.py  test_cache.py  test_tools.py
