[project]
name = "granola-fast-mcp"
version = "0.2.0"
description = "MCP server for Granola.ai meeting intelligence (FastMCP)"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.14.0,<3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
granola-fast-mcp = "granola_fast_mcp.server:main"
granola-backup = "granola_fast_mcp.backup:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "prek>=0.3.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "ty>=0.0.15",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]
